--- a/css/percentage-circle/circle.css
+++ b/css/percentage-circle/circle.css
@@ -242,6 +242,7 @@
 .c100.center {
   float: none;
   margin: 0 auto;
+  margin-bottom: 25px;
 }
 .c100.big {
   font-size: 240px;
@@ -249,16 +250,17 @@
 .c100.small {
   font-size: 80px;
 }
+
 .c100 > span {
   position: absolute;
   width: 100%;
   z-index: 1;
   left: 0;
   top: 0;
-  width: 5em;
-  line-height: 5em;
-  font-size: 0.2em;
-  color: #cccccc;
+  width: 3.33em;
+  line-height: 3.33em;
+  font-size: 0.3em;
+  color: #ff0036;;
   display: block;
   text-align: center;
   white-space: nowrap;
@@ -277,14 +279,14 @@
 }
 .c100:after {
   position: absolute;
-  top: 0.08em;
-  left: 0.08em;
+  top: 0.04em;
+  left: 0.04em;
+  width: 0.92em;
+  height: 0.92em;
   display: block;
   content: " ";
   border-radius: 50%;
   background-color: #f5f5f5;
-  width: 0.84em;
-  height: 0.84em;
   -webkit-transition-property: all;
   -moz-transition-property: all;
   -o-transition-property: all;
@@ -1062,4 +1064,19 @@
 }
 .c100.orange.dark:hover > span {
   color: #e08833;
+}
+
+.c100.red .bar,
+.c100.red .fill {
+  border-color: #ff0036 !important;
+}
+.c100.red:hover > span {
+  color: #ff0036;
+}
+.c100.red.dark .bar,
+.c100.red.dark .fill {
+  border-color: #ff0036 !important;
+}
+.c100.red.dark:hover > span {
+  color: #ff0036;
 }
