--- a/JQuery/Burger-menu/css/style.css
+++ b/JQuery/Burger-menu/css/style.css
@@ -33,7 +33,9 @@ a {
   margin: 0 auto;
   padding: 0 15px;
 }
-
+/* ==========================================================================
+Header
+========================================================================== */
 .header {
   background-color: #7db9e8;
   position: fixed;
@@ -100,7 +102,6 @@ a {
   left: 0;
   transition: all 0.3s ease 0s;
 }
-
 .menu__burger span {
   position: absolute;
   background-color: #fff;
@@ -110,27 +111,23 @@ a {
   top: 9px;
   transition: all 0.3s ease 0s;
 }
+.menu__burger:before {
+  top: 0;
+}
+.menu__burger:after {
+  bottom: 0;
+}
 
 .menu__burger.active:before{
   transform: rotate(45deg);
   top: 9px;
 }
-
 .menu__burger.active span{
   transform: scale(0);
 }
-
 .menu__burger.active:after{
   transform: rotate(-45deg);
   bottom: 9px;
-}
-
-.menu__burger:before {
-  top: 0;
-}
-
-.menu__burger:after {
-  bottom: 0;
 }
 
 .header-menu {
@@ -140,18 +137,28 @@ a {
   width: 100%;
   height: 100%;
   display: flex;
-  -webkit-align-items: center;
-          align-items: center;
-  -webkit-justify-content: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  background-color: rgba(0, 0, 0, .9);
-  transform: translateY(-100%);
-  transition: transform 0.3s ease 0s;
+  background-color: #7db9e8;
+  
+/*   Burger-menu-animation top */
+/*   transform: translateY(-100%); */
+
+/*  Burger-menu-animation right-corner */
+  clip-path: circle(100px at 100% -16%);
+  
+/*  Burger-menu-animation */
+/*   transition: transform 0.6s ease 0s; */
+  transition: clip-path 1s ease-out;
 } 
 
 .header-menu.active {
-  transform: translateY(0%);
+  /* Burger-menu-animation top */
+/*   transform: translateY(0%); */
+  
+ /* Burger-menu-animation right-corner */
+  clip-path: circle(1300px at 100% -16%);
 }
 .menu__item {
   font-size: 30px;
