--- a/css/percentage-circle/css/style.css
+++ b/css/percentage-circle/css/style.css
@@ -22,6 +22,11 @@ ul, ol {
 
 ul li {
   list-style: none;
+  margin-top: 19px;
+}
+
+ul {
+  margin-top: 100px;
 }
 
 a {
@@ -30,32 +35,23 @@ a {
 
 .container {
   max-width: 1200px;
-  margin: 30px auto;
+  margin: 100px auto;
   padding: 0 15px;
+  display: flex;
+  justify-content: space-around;
 }
 
-.name {
-  padding-top: 30px;
-  padding-left: 10px;
-  font-size: 30px;
-  font-weight: 500;
-}
 
 /* ==========================================================================
- Scrolling just css without animation
+Percentage
 ========================================================================== */
-.parallax {
-  height: 500px;
-  background: url(../img/parallax.jpg) no-repeat center;
-  -webkit-background-size: cover;
-       -o-background-size: cover;
-          background-size: cover;
-  background-attachment: fixed;
+.c100.center {
+  margin-bottom: 25px;
+  color: #000;
+  font-size: 120px;
+  background-color: #cccccc;
+
 }
-/* ==========================================================================
- Scrolling with animation
-========================================================================== */
-.parallax-window {
-  min-height: 500px;
-  background: transparent;
+.c100:after {
+  background-color: #f5f5f5;
 }
