change template for site

--- a/template for site/app/scss/partials/_media.scss
+++ b/template for site/app/scss/partials/_media.scss
@@ -1,7 +1,7 @@
 @import "libs";
-@import "colors";
+@import "global";
 @import "typography";
-@import "buttons";
 
 @media screen and (max-width: 1245px) {
+	
 }
