--- a/template for site/app/scss/partials/_vars.scss
+++ b/template for site/app/scss/partials/_vars.scss
@@ -1,5 +1,3 @@
-// Typography partial
-
 // Colours partial
 $white: #fff;
 $black: #000;
@@ -23,7 +21,7 @@ $normal: 400;
 $medium: 500;
 $semibold: 600;
 $bold: 700;
-$black: 900;
+$extrablack: 900;
 
 // Sizes
 $font-size-h1:30px;
