--- a/template for site/app/scss/style.scss
+++ b/template for site/app/scss/style.scss
@@ -2,7 +2,7 @@
 // Imports
 @import "partials/libs";
 @import "partials/global";
-@import "partials/typography";
+@import "partials/vars";
 /* ==========================================================================
 	General Styles
 ========================================================================== */
