Update template for site

--- a/template for site/app/scss/style.scss
+++ b/template for site/app/scss/style.scss
@@ -4,6 +4,11 @@
 // Partials
 @import "partials/libs";
 @import "partials/vars";
+@import "partials/fonts";
+
+// Blocks
+@import "blocks/header";
+@import "blocks/footer";
 
 /* ==========================================================================
   General Styles
