--- a/new-gulp-template/app/scss/partials/_vars.scss
+++ b/new-gulp-template/app/scss/partials/_vars.scss
@@ -1,4 +1,4 @@
-// Colours partial
+// Colours
 $white: #fff;
 $black: #000;
 $red: #ff0036;
@@ -12,8 +12,6 @@ $btn-black: #131313;
 // Fonts
 $font-family: "Raleway", sans-serif;
 $font-secondary: "Open Sans", sans-serif;
-$font-accent: "Cardo", Georgia, 'Times New Roman', serif;
-$lato: 'Lato', sans-serif;
 
 // Weights
 $light: 300;
@@ -22,16 +20,6 @@ $medium: 500;
 $semibold: 600;
 $bold: 700;
 $extrablack: 900;
-
-// Sizes
-$font-size-h1:30px;
-$font-size-h2:40px;
-$font-size-h3:24px;
-$font-size-h4:18px;
-$font-size-h5:15px;
-$font-size-p: 15px;
-$nav-font-size: 18px;
-$blog-post-title: 11px;
 
 // Adaptive md
 $minwidth: 320px;
