--- a/new-gulp-template/app/scss/partials/_vars.scss
+++ b/new-gulp-template/app/scss/partials/_vars.scss
@@ -13,6 +13,9 @@ $btn-black: #131313;
 $font-family: "Raleway", sans-serif;
 $font-secondary: "Open Sans", sans-serif;
 
+// Adaptive-font
+$maxWidth: 1280;
+
 // Weights
 $light: 300;
 $normal: 400;
