--- a/JS/popup/css/style.scss
+++ b/JS/popup/css/style.scss
@@ -4,8 +4,7 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
@@ -18,7 +17,7 @@ body {
 
 ul, ol {
   margin: 0;
-  padding: 0;
+  padding: 0; 
 }
 
 ul li {
@@ -36,68 +35,62 @@ a {
 }
 
 .wrapper {
-  overflow: hidden;
-  min-width: 100%;
+	overflow: hidden;
+	min-width: 100%;
 }
 
 body.lock {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .popup.open {
-  opacity: 1;
-  visibility: visible;
+	opacity: 1;
+	visibility: visible;
 }
-
 /* ==========================================================================
   Popup
 ========================================================================== */
 .popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  opacity: 0;
-  visibility: hidden;
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .8);
+	opacity: 0;
+	visibility: hidden;
+	overflow-x: hidden;
+	overflow-y: auto;
+	transition: all 0.5s;
+
+
+  &__body {
+		min-height: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 30px 10px;
+ 	}
+ 
+	&__content {
+		background-color: rgb(0, 0, 0);	
+		padding: 15px 30px;
+		position: relative;
+	}
+
+	&__close {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		color: #FFF;
+		font-size: 23px;
+
+		&:hover {
+			color: #e84118;
+		}
+	}
 }
 
-.popup__body {
-  min-height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 30px 10px;
-}
-
-.popup__content {
-  background-color: black;
-  padding: 15px 30px;
-  position: relative;
-}
-
-.popup__close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  color: #FFF;
-  font-size: 23px;
-}
-
-.popup__close:hover {
-  color: #e84118;
-}
 
 .popup__title {
   text-align: center;
@@ -121,7 +114,6 @@ body.lock {
   width: 200px;
   margin: 10px auto;
   outline: none;
-  -webkit-transition: 0.25s;
   transition: 0.25s;
 }
 
@@ -136,11 +128,9 @@ body.lock {
   padding: 14px 40px;
   margin: 10px auto;
   outline: none;
-  -webkit-transition: 0.25s;
   transition: 0.25s;
   cursor: pointer;
 }
-
 .popup__btn:hover {
   background-color: #e84118;
 }
