--- a/new-gulp-template/app/scss/style.scss
+++ b/new-gulp-template/app/scss/style.scss
@@ -1,13 +1,14 @@
 // Fonts
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
+// Mixins
+@import "mixins/fonts-style";
+@import "mixins/adaptive-font";
+
 // Partials
 @import "partials/fonts";
 @import "partials/vars";
 @import "partials/libs";
-
-// Mixins
-@import "mixins/_fonts-style";
 
 // Blocks
 @import "blocks/header";
@@ -56,7 +57,8 @@ body.lock {
 }
 
 .main-screen {
-
+	position: relative;
+	
 	&__bg {
 		position: absolute;
 		width: 100%;
