--- a/gulp-assembly/app/scss/components/slider.scss
+++ b/gulp-assembly/app/scss/components/slider.scss
@@ -1,3 +1,5 @@
+
+// Dots
 .slick-slide.slick-current{}
 .slick-dots{
 	position: absolute;
@@ -31,7 +33,7 @@
 }
 
 
-/* Стрелка */
+// Arrows
 .slick-arrow {
 	position: absolute;
 	padding: 0;
