--- a/gulp-assembly/app/scss/partials/_vars.scss
+++ b/gulp-assembly/app/scss/partials/_vars.scss
@@ -1,16 +1,14 @@
-// Colours
-$white: #fff;
-$black: #000;
-$red: #ff0036;
-$gray: #262626;
-$font-gray: #505050;
-$font-color: #a4a4a4;
-$line-color: #262626;
-$brand-color: #52c13e;
-$btn-black: #131313;
+// Adaptive md
+$minwidth: 320px;
+$maxWidth: 1920;
+$maxWidthContainer: 1200;
+$md1: $maxWidthContainer + 12;
+$md2: 991.98;
+$md3: 767.98;
+$md4: 479.98;
 
-
-$font-secondary: "Open Sans", sans-serif;
+// Fonts
+$font-family: Poppins;
 
 // Weights
 $light: 300;
