--- a/gulp-assembly/app/scss/components/menu.scss
+++ b/gulp-assembly/app/scss/components/menu.scss
@@ -1,6 +1,6 @@
 .menu {
 	
-	@media (max-width: 1000px) {
+	@media (max-width: $md2+px) {
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -26,7 +26,7 @@
 		position: relative;
 		z-index: 3;
 
-		@media (max-width: 1000px) {
+		@media (max-width: $md2+px) {
 			display: block;
 		}
 	}
@@ -47,7 +47,7 @@
 	&__link {
 		position: relative;
 		padding: 39px 0px;
-		color: $white;
+		color: #fff;
 		text-transform: capitalize;
 
 		&:hover {
@@ -60,7 +60,7 @@
 	&__burger {
 		display: none;
 
-		@media (max-width: 1000px) {
+		@media (max-width: $md2+px) {
 			display: block;
 			position: absolute;
 			width: 30px;
@@ -77,7 +77,7 @@
 			&::after,
 			&::before {
 				content: "";
-				background-color: $white;
+				background-color: #fff;
 				position: absolute;
 				width: 100%;
 				height: 2px;
@@ -87,7 +87,7 @@
 
 			span {
 				position: absolute;
-				background-color: $white;
+				background-color: #fff;
 				width: 100%;
 				height: 2px;
 				left: 0;
