--- a/gulp-assembly/app/scss/partials/_fonts.scss
+++ b/gulp-assembly/app/scss/partials/_fonts.scss
@@ -2,6 +2,7 @@
 	font-family: 'Metropolis';
 	src: url('../fonts/Metropolis-Bold.woff2') format('woff2'),
 		 url('../fonts/Metropolis-Bold.woff') format('woff');
-	font-weight: normal;
+	font-weight: 300;
+	font-display: swap;
 	font-style: normal;
 }
