--- a/gulp-assembly/app/scss/style.scss
+++ b/gulp-assembly/app/scss/style.scss
@@ -7,6 +7,7 @@
 
 // Partials
 @import "partials/libs";
+@import "partials/vars";
 
 // Blocks
 @import "blocks/header";
@@ -15,20 +16,6 @@
 // Components
 @import "components/menu";
 
-/* ==========================================================================
-  Vars
-========================================================================== */
-// Adaptive md
-$minwidth: 320px;
-$maxWidth: 1920;
-$maxWidthContainer: 1280;
-$md1: $maxWidthContainer + 12;
-$md2: 991.98;
-$md3: 767.98;
-$md4: 479.98;
-
-// Fonts
-$font-family: "Raleway", sans-serif;
 /* ==========================================================================
   General Styles
 ========================================================================== */
@@ -72,11 +59,33 @@ body {
 	}
 }
 
-._ibg{
+.ibg{
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
 	img{
 		display: none;
+	}
+}
+
+.select {
+	width: 100%;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	border: 1px solid #7E9BBD;
+	border-radius: 6px;
+	background-color: #fff;
+	padding: 10px 35px 10px 15px;
+	outline: none;
+	cursor: pointer;
+
+	&::-ms-expand {
+		display: none;
+	}
+
+	&:focus {
+		outline: none;
+		box-shadow: 0px 0px 0px 1px #38577a, 0px 0px 10px #7e9bbd;
 	}
 }
